初回コミット

--- a/team_ranking_announcement.html
+++ b/team_ranking_announcement.html
@@ -68,28 +68,28 @@
     const rankings = [
 
       `<div class="ranking">
-        <h2>🥉 第3位：チームtest</h2>
-        <p><strong>仮説：</strong>なんとなく</p>
-        <p><strong>X:</strong> A15歳未満人口【人】 × <strong>Y:</strong> E幼稚園数【園】</p>
-        <p><strong>決定係数 R² =</strong> 0.8505</p>
+        <h2>🥉 第3位：有本</h2>
+        <p><strong>仮説：</strong>んｆなえわ</p>
+        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> B年平均気温【℃】</p>
+        <p><strong>決定係数 R² =</strong> 0.2162</p>
         <p class="celebrate">🎉 おめでとうございます！ 🎊</p>
       </div>`
     ,
 
       `<div class="ranking">
-        <h2>🥈 第2位：チームZ</h2>
-        <p><strong>仮説：</strong>（仮説未記入）</p>
-        <p><strong>X:</strong> 出生数 × <strong>Y:</strong> 65歳以上人口</p>
-        <p><strong>決定係数 R² =</strong> 0.9646</p>
+        <h2>🥈 第2位：有本</h2>
+        <p><strong>仮説：</strong>人口が多いほど、温暖化ガスが多いと思ったから</p>
+        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> B年平均気温【℃】</p>
+        <p><strong>決定係数 R² =</strong> 0.2162</p>
         <p class="celebrate">🎉 おめでとうございます！ 🎊</p>
       </div>`
     ,
 
       `<div class="ranking">
-        <h2>🥇 第1位：チームB</h2>
-        <p><strong>仮説：</strong>（仮説未記入）</p>
-        <p><strong>X:</strong> 総人口 × <strong>Y:</strong> 15歳未満人口</p>
-        <p><strong>決定係数 R² =</strong> 0.9918</p>
+        <h2>🥇 第1位：有本</h2>
+        <p><strong>仮説：</strong>人口が多いほど、温暖化ガスが多いと思ったから</p>
+        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> B年平均気温【℃】</p>
+        <p><strong>決定係数 R² =</strong> 0.2162</p>
         <p class="celebrate">🎉 おめでとうございます！ 🎊</p>
       </div>`
     
