--- a/team_ranking_announcement.html
+++ b/team_ranking_announcement.html
@@ -68,28 +68,28 @@
     const rankings = [
 
       `<div class="ranking">
-        <h2>🥉 第3位：有本</h2>
-        <p><strong>仮説：</strong>んｆなえわ</p>
-        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> B年平均気温【℃】</p>
-        <p><strong>決定係数 R² =</strong> 0.2162</p>
+        <h2>🥉 第3位：安藤帝国</h2>
+        <p><strong>仮説：</strong>人口に比例して需要が出ると考えた。</p>
+        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> H都市公園数【箇所】</p>
+        <p><strong>決定係数 R² =</strong> 0.9944</p>
         <p class="celebrate">🎉 おめでとうございます！ 🎊</p>
       </div>`
     ,
 
       `<div class="ranking">
-        <h2>🥈 第2位：有本</h2>
-        <p><strong>仮説：</strong>人口が多いほど、温暖化ガスが多いと思ったから</p>
-        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> B年平均気温【℃】</p>
-        <p><strong>決定係数 R² =</strong> 0.2162</p>
+        <h2>🥈 第2位：masako</h2>
+        <p><strong>仮説：</strong>身の回りであまり公園を見かけないから</p>
+        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> H都市公園数【箇所】</p>
+        <p><strong>決定係数 R² =</strong> 0.9944</p>
         <p class="celebrate">🎉 おめでとうございます！ 🎊</p>
       </div>`
     ,
 
       `<div class="ranking">
-        <h2>🥇 第1位：有本</h2>
-        <p><strong>仮説：</strong>人口が多いほど、温暖化ガスが多いと思ったから</p>
-        <p><strong>X:</strong> A総人口【人】 × <strong>Y:</strong> B年平均気温【℃】</p>
-        <p><strong>決定係数 R² =</strong> 0.2162</p>
+        <h2>🥇 第1位：submit</h2>
+        <p><strong>仮説：</strong>なんとなく</p>
+        <p><strong>X:</strong> H都市公園数【箇所】 × <strong>Y:</strong> A総人口【人】</p>
+        <p><strong>決定係数 R² =</strong> 0.9944</p>
         <p class="celebrate">🎉 おめでとうございます！ 🎊</p>
       </div>`
     
